Fix register modal input size on mobile

--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -91,7 +91,9 @@
         }
 
         .email-input-group {
-            transform: scale(0.56);
+            .btn {
+                transform: scale(0.56);
+            }
         }
 
         .form {
@@ -150,7 +152,9 @@
             }
 
             .email-input-group {
-                transform: scale(2);
+                .btn {
+                    transform: scale(2);
+                }
             }
 
             .success-message {
